--- a/R_exploringModelingFuelConsumption/R_exploringModelingFuelConsumption2.Rmd
+++ b/R_exploringModelingFuelConsumption/R_exploringModelingFuelConsumption2.Rmd
@@ -6,21 +6,28 @@ output: html_document
 ```{r,echo=FALSE,message=FALSE}
 library(alr4)
 library(ggplot2)
+library(GGally)
 colnames(fuel2001)
 ```
 
 The data set "fuel2001" is about fuel consumption in the US, broken down by state, including DC.  It contains information about the number of licensed drivers ('Drivers'), the amount of gasoline sold for road use ('FuelC', in thousands of gallons), the number of miles of federal-aid highway, per-capita income as of the year 2000, estimated numer of miles driven per-capita, etc.
 
 #### Fancy graphs
-The following fancy graphs might make it look like there's a relationship between the gas tax and the number of miles driven per capita:
+Here's a scatterplot matrix of the data, with Highway Miles transformed to Highway Miles Per Capita:
 
-```{r,echo=FALSE}
+```{r,echo=TRUE,message=FALSE}
+fuel2001$HWPC <- fuel2001$Miles/fuel2001$Pop
+# ggpairs(fuel2001,columns=c('MPC','Tax','HWPC','Income'),aes(color=I('purple')))
+pairs(MPC~HWPC+Tax+Income,fuel2001,col='purple')
+```
+The following fancy graphs might make it look like there's a relationship between the gas tax and the number of miles driven per capita:
+```{r,echo=FALSE,message=FALSE}
 scatterplot(MPC~Tax,fuel2001)
 plot(Effect(c('Tax'),mod=lm(MPC~Tax,fuel2001)))
 ```
 
 But a quick statistical test casts doubt on this relationship:
-```{r,echo=FALSE}
+```{r,echo=FALSE,message=FALSE}
 summary(lm(MPC~Tax,fuel2001))
 ```
 
@@ -32,7 +39,7 @@ Let's back up and get acquainted with the data.
 First, to get a handle on some of the main variables, a few plots:
 
 ```{r,echo=FALSE, message=FALSE,warning=FALSE}
-qplot(fuel2001$Miles,color=I("purple"))
+ggplot(data=fuel2001, aes(fuel2001$Miles)) + geom_histogram(col=I('white'),fill=I('blue'),alpha=.5)
 ```
 
 Notice that the number of miles of federal-aid highway is very skewed among states: most states have a moderate length of federal-aid highway, with just one having quite a large amount.  Which is the outlying state?
@@ -44,8 +51,8 @@ rownames(fuel2001)[which.max(fuel2001$Miles)]
 
 The outlier is Texas. Now let's take a look at the populations:
 
-```{r,echo=TRUE}
-qplot(fuel2001$Pop,color=I("blue"))
+```{r,echo=TRUE,warning=FALSE}
+ggplot(data=fuel2001,aes(fuel2001$Pop))+geom_histogram(col=I('white'),fill=I('purple'),alpha=.5)
 ```
 
 Most states have populations below 10 million; which state is most populous?
@@ -55,26 +62,14 @@ rownames(fuel2001)[which.max(fuel2001$Pop)]
 ```
 
 What are some of the other most populous states?
-```{r,echo=FALSE}
+```{r,echo=TRUE,tidy=TRUE}
 order(fuel2001$Pop)
 head(rownames(fuel2001)[order(fuel2001$Pop,decreasing=TRUE)],10)
 ```
 
-
+#### Modeling Miles Driven per Capita
 Now let's try to predict the number of miles driven per capita from some of the other variables.  Let's try using income, gas tax, and number of miles of federal highway per capita as predictors.
 
-First we need a new variable, highway miles per capita (HWPC).
-
-```{r}
-fuel2001$HWPC <- fuel2001$Miles/fuel2001$Pop
-```
-Then we can get an idea of the relationships between and among our predictors and the response variable with a scatterplot matrix:
-
-```{r,echo=FALSE}
-pairs(MPC~HWPC+Tax+Income,fuel2001)
-```
-
-Now we can create a simple model to predict the number of miles driven per capita from the other variables:
 
 ```{r, echo=TRUE,tidy=TRUE}
 mMHTI <- lm(MPC~HWPC+Tax+Income, fuel2001)
@@ -86,8 +81,7 @@ These plots show the relationships among each of the predictors and the response
 
 It is a good idea to look at the discrepancies between the modeled values and the actual values to see whether there are any patterns:
 
-
-```{r, echo=FALSE}
+```{r, echo=TRUE}
 plot(mMHTI$residuals)
 ```
 
@@ -103,13 +97,13 @@ Georgia's original data out of the model.
 
 Here's Georgia's data:
 
-```{r,echo=FALSE}
+```{r,echo=TRUE}
 fuel2001["GA",]
 ```
 
 And here's a new model with a dataset that leaves out Georgia's data:
 
-```{r,echo=FALSE}
+```{r,echo=TRUE}
 fuel2001GA <- fuel2001[rownames(fuel2001) !='GA',]
 model.MHTI.noGA <- lm(MPC~HWPC+Tax+Income,fuel2001GA)
 ```
@@ -119,7 +113,7 @@ summary(model.MHTI.noGA)
 
 We can use R's 'predict' command to get a prediction for Georgia's number of miles driven per capita.  
 
-```{r,echo=FALSE}
+```{r,echo=TRUE}
 GApredict <- predict(model.MHTI.noGA,newdata=fuel2001['GA',],interval='prediction')[1]
 GAactual <- fuel2001$MPC[rownames(fuel2001)=='GA']
 GAactual
@@ -127,7 +121,7 @@ GAactual
 
 Here are the two values compared side-by-side:
 
-```{r,echo=FALSE}
+```{r,echo=TRUE}
 com <- matrix(c(GAactual,GApredict),ncol=2)
 colnames(com) <- c("Actual","Predicted")
 com
@@ -135,7 +129,7 @@ com
 
 We can also get a prediction interval, constructed so that it has a 95% chance of containing Georgia's true MPC. 
 
-```{r,echo=FALSE}
+```{r,echo=TRUE}
 p <- matrix(predict(model.MHTI.noGA,newdata=fuel2001['GA',],interval='prediction')[2:3],ncol=2)
 colnames(p) <- c("Lower bound", "Upper bound")
 p
